--- a/.github/workflows/deploy-package.yml
+++ b/.github/workflows/deploy-package.yml
@@ -13,12 +13,10 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
+        source-url: https://nuget.pkg.github.com/<organization>/index.json
+      env:
+        NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}     
     - name: Pack
       run: dotnet pack --configuration Release -o out
     - name: Push
-      run: dotnet nuget push ./ASPClientLib/out/*.nupkg
+      run: dotnet nuget push ./out/*.nupkg
