--- a/.github/workflows/deploy-package.yml
+++ b/.github/workflows/deploy-package.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        source-url: https://nuget.pkg.github.com/<organization>/index.json
+        source-url: https://nuget.pkg.github.com/ja3cob/index.json
       env:
         NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}     
     - name: Pack
