--- a/ASPClientLib/ASPClientLib.csproj
+++ b/ASPClientLib/ASPClientLib.csproj
@@ -4,9 +4,17 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>1.0.8</Version>
+    <Version>1.0.9</Version>
     <Description>Library of necessary attributes, interfaces and classes representing these from ASP.NET Core</Description>
     <Company>Ja3cob</Company>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
