--- a/ASPClientLib/ASPClientLib.csproj
+++ b/ASPClientLib/ASPClientLib.csproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
-    <Version>1.0.9</Version>
+    <Version>1.1.0</Version>
     <Description>Library of necessary attributes, interfaces and classes representing these from ASP.NET Core</Description>
     <Company>Ja3cob</Company>
     <PackageReadmeFile>README.md</PackageReadmeFile>
